Fixed a bug with the nav buttons + restyled them
I forgot to set the correct path for the Link components. The nav
buttons were also too wide for my taste, so I decided to make them a
tad less wider.

--- a/src/pages/Root.css
+++ b/src/pages/Root.css
@@ -16,7 +16,7 @@ nav {
   display: flex;
   align-items: center;
   height: 40px;
-  padding: 0px 24px;
+  padding: 0px 16px;
   border-radius: 20px;
   margin-right: 8px;
   color: black;
